--- a/docker_run_mongos.sh.example
+++ b/docker_run_mongos.sh.example
@@ -1,1 +1,2 @@
+#这3个ip根据实际ip配置
 docker run --name mongos0 -d -p 27017:27017 --entrypoint "mongos" mongo --configdb rs_configsvr/172.17.0.3:27019,172.17.0.7:27019,172.17.0.8:27019 --bind_ip_all
