--- a/docker_run_mongos.sh.example
+++ b/docker_run_mongos.sh.example
@@ -1,3 +1,5 @@
 #这3个ip根据实际ip配置
 #docker run --name mongos0 -d -p 27017:27017 --entrypoint "mongos" mongo --storageEngine inMemory --configdb rs_configsvr/172.17.0.3:27019,172.17.0.4:27019,172.17.0.5:27019 --bind_ip_all
 docker run --name mongos0  -d -p 27017:27017  -v /home/mongodb/conf/mongos.conf:/data/configdb/mongos.conf -v /home/mongodb/testKeyFile.file:/data/configdb/key.file -v /home/mongodb/log/mg/mongos.log:/data/configdb/log/mongos.log --entrypoint "mongos" mongo --config /data/configdb/mongos.conf
+docker run --name mongos1  -d -p 37017:27017  -v /home/mongodb/conf/mongos.conf:/data/configdb/mongos.conf -v /home/mongodb/testKeyFile.file:/data/configdb/key.file -v /home/mongodb/log/mg/mongos.log:/data/configdb/log/mongos.log --entrypoint "mongos" mongo --config /data/configdb/mongos.conf
+docker run --name mongos2  -d -p 47017:27017  -v /home/mongodb/conf/mongos.conf:/data/configdb/mongos.conf -v /home/mongodb/testKeyFile.file:/data/configdb/key.file -v /home/mongodb/log/mg/mongos.log:/data/configdb/log/mongos.log --entrypoint "mongos" mongo --config /data/configdb/mongos.conf
